*** empty log message ***

--- a/support/www/index.html
+++ b/support/www/index.html
@@ -4,7 +4,13 @@
 </head>
 <body>
 <p>In the absence of anything else to put here for the moment, here are some notes on the <a href="http://slashdot.org/">Slashdotting</a> of CougaarForge that took place Nov 05, 2003.
-<p>At about 1:40 EST, a story about CougaarForge (submitted by the ever-eloquent Aaron Helsinger) was posted to the front page of Slashdot.  Below is a chart of the hit for each hour for the rest of that day.
+<p>At about 1:40 AM EST, a story about CougaarForge (submitted by the ever-eloquent Aaron Helsinger) was posted to the front page of Slashdot.  Below is a chart of the results - the hits for each hour from Nov 4 - Nov 6:
 <p><img src="hits.png"/>
+<p>Misc notes:
+<ul>
+<li>The previous day (Nov 4) was actually a fairly busy day, since some links to CougaarForge had been posted to various agent sites.  
+<li>These hit counts don't includes hits on various subdomains within CougaarForge, since those go to separate log files.  So the totals are actually a bit higher than posted here.  These are pretty representative, though.
+<li>Joe is going to provide the router traffic graphs for the day, too.
+</ul>
 </body>
 </html>
