*** empty log message ***

--- a/support/www/index.html
+++ b/support/www/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>CougaarForge Support</a>
+<title>CougaarForge Support</a></title>
 </head>
 <body>
 <p>In the absence of anything else to put here for the moment, here are some notes on the <a href="http://slashdot.org/">Slashdotting</a> of CougaarForge that took place Nov 05, 2003.
