--- a/support/www/index.html
+++ b/support/www/index.html
@@ -8,7 +8,7 @@
 <p><img src="hits.png"/>
 <p>Misc notes:
 <ul>
-<li>Our previous daily traffic was about 300-400 hits an hour - at the peak of the Slashdotting we went to 16500 hits per hour, and now we've settled back down to 700-800 hits per hour.
+<li>Our previous daily traffic was about 300-400 hits an hour - at the peak of the Slashdotting we went up to 16500 hits per hour.  Now we've settled back down to 700-800 hits per hour.
 <li>These hit counts don't includes hits on various subdomains within CougaarForge, since those go to separate log files.  So the totals are actually a bit higher than posted here.  These are pretty representative, though.
 <li>The dip at around 8:30 was when the Postgres database began running out of connections.  I raised <code>max_connections</code>, <code>shared_buffers</code>, and <code>sort_mem</code>, restarted the database, and all was well.  Sigh.  Learn something new every day.
 <li>Joe is going to provide the router traffic graphs for the day, too.
