*** empty log message ***

--- a/support/www/index.html
+++ b/support/www/index.html
@@ -3,12 +3,13 @@
 <title>CougaarForge Support</title>
 </head>
 <body>
-<p>In the absence of anything else to put here for the moment, here are some notes on the <a href="http://slashdot.org/">Slashdotting</a> of <a href="http://cougaar.org/">CougaarForge</a> that took place Nov 05, 2003.
-<p>At about 1:40 AM EST, a <a href="http://developers.slashdot.org/article.pl?sid=03/11/04/203219">story</a> about CougaarForge (submitted by the ever-eloquent Aaron Helsinger) was posted to the front page of Slashdot.  Below is a chart of the results - the hits for each hour from Nov 4 - Nov 6:
+<p>Here are some notes on the <a href="http://slashdot.org/">Slashdotting</a> of <a href="http://cougaar.org/">CougaarForge</a> that took place Nov 05, 2003.
+<p>At about 1:40 AM EST November 5, 2003, a <a href="http://developers.slashdot.org/article.pl?sid=03/11/04/203219">story</a> about CougaarForge (submitted by the ever-eloquent Aaron Helsinger) was posted to the front page of Slashdot.  Below is a chart of the results - the hits for each hour from Nov 4 - Nov 6:
 <p><img src="hits.png"/>
 <p>Misc notes:
 <ul>
 <li>Our previous daily traffic was about 300-400 hits an hour - at the peak of the Slashdotting we went up to 16500 hits per hour.  Now we've settled back down to 700-800 hits per hour.
+<li>Here are the <a href="http://cougaar.org/usage_all/usage_200311.html">Webalizer traffic reports</a> for November so far - the Slashdotting day kind of <a href="http://cougaar.org/usage_all/usage_200311.html#DAYSTATS">stands out</a>.
 <li>These hit counts don't includes hits on various subdomains within CougaarForge, since those go to separate log files.  So the totals are actually a bit higher than posted here.  These are pretty representative, though.
 <li>The dip at around 8:30 was when the Postgres database began running out of connections.  I raised <code>max_connections</code>, <code>shared_buffers</code>, and <code>sort_mem</code>, restarted the database, and all was well.  Sigh.  Learn something new every day.
 <li>Joe is going to provide the router traffic graphs for the day, too.
