*** empty log message ***

--- a/support/www/index.html
+++ b/support/www/index.html
@@ -27,6 +27,7 @@ Connections:
       12.248.129.117: 4 Time(s)
       4.22.165.34: 2 Time(s)
 </pre>
+<li>A good idea of the activity can also be seen from the <a href="http://cougaar.org/project/stats/index.php?report=last_30&group_id=17">CougaarForge project activity graph for the Cougaar project.</a>.
 <li>Joe is going to provide the router traffic graphs for the day, too.
 </ul>
 </body>
