*** empty log message ***

--- a/support/www/index.html
+++ b/support/www/index.html
@@ -6,6 +6,8 @@
 <p>Here are some notes on the <a href="http://slashdot.org/">Slashdotting</a> of <a href="http://cougaar.org/">CougaarForge</a> that took place Nov 05, 2003.
 <p>At about 1:40 AM EST November 5, 2003, a <a href="http://developers.slashdot.org/article.pl?sid=03/11/04/203219">story</a> about CougaarForge (submitted by the ever-eloquent Aaron Helsinger) was posted to the front page of Slashdot.  Below is a chart of the results - the hits for each hour from Nov 4 - Nov 6:
 <p><img src="hits.png"/>
+<li>A good idea of the activity can also be seen from the CougaarForge activity graph for the Cougaar project (red == pageviews, blue = downloads):
+<p><img src="stats_graph_30_days.png"/>
 <p>Misc notes:
 <ul>
 <li>Our previous daily traffic was about 300-400 hits an hour - at the peak of the Slashdotting we went up to 16500 hits per hour.  Now we've settled back down to 700-800 hits per hour.
@@ -27,8 +29,6 @@ Connections:
       12.248.129.117: 4 Time(s)
       4.22.165.34: 2 Time(s)
 </pre>
-<li>A good idea of the activity can also be seen from the CougaarForge activity graph for the Cougaar project:
-<p><img src="stats_graph_30_days.png"/>
 <li>Joe is going to provide the router traffic graphs for the day, too.
 </ul>
 </body>
