--- a/support/www/index.html
+++ b/support/www/index.html
@@ -6,6 +6,12 @@
 <p>Here are some notes on the <a href="http://slashdot.org/">Slashdotting</a> of <a href="http://cougaar.org/">CougaarForge</a> that took place Nov 05, 2003.
 <p>At about 1:40 AM EST November 5, 2003, a <a href="http://developers.slashdot.org/article.pl?sid=03/11/04/203219">story</a> about CougaarForge (submitted by the ever-eloquent Aaron Helsinger) was posted to the front page of Slashdot.  Below is a chart of the results - the hits for each hour from Nov 4 - Nov 6:
 <p><img src="hits.png"/>
+<li>Here are some router traffic graphs that illustrate the magnitude of this Slashdotting.  First, the week surrounding the big day:
+<p><img src="slashdotted-weekly4.png"/>
+<p>Now, the graph for the entire month:
+<p><img src="slashdotted-monthly4.png"/>
+<p>And finally, the big day itself:
+<p><img src="slashdotted-daily-total.png"/>
 <li>A good idea of the activity can also be seen from the CougaarForge activity graph for the Cougaar project:
 <p><img src="stats_graph_30_days.png"/>
 <p>Misc notes:
@@ -29,7 +35,6 @@ Connections:
       12.248.129.117: 4 Time(s)
       4.22.165.34: 2 Time(s)
 </pre>
-<li>Joe is going to provide the router traffic graphs for the day, too.
 </ul>
 </body>
 </html>
