Compilation coloring works now

--- a/cf-dashboard/index.html
+++ b/cf-dashboard/index.html
@@ -1,3 +1,4 @@
+<message priority='warn'><![CDATA[Starting build at 11/26/2003 01:59:05]]></message>
 <html>
 <head>
 <title>The Cougaar Dashboard</title>
@@ -15,9 +16,9 @@
 
 <tr>
 <td>core</td>
-<td>javaiopatch</td>
+<td bgcolor=#00FF00>javaiopatch (0)</td>
 <td>B10_4</td>
-<td></td>
+<td>01:59:05</td>
 </tr>
 
 </table>
