--- a/cf-dashboard/index.html
+++ b/cf-dashboard/index.html
@@ -1,24 +1,33 @@
-<message priority='warn'><![CDATA[Starting build at 11/26/2003 01:59:05]]></message>
+<message priority='warn'><![CDATA[Starting build at 11/26/2003 02:23:46]]></message>
 <html>
 <head>
 <title>The Cougaar Dashboard</title>
 </head>
 <body>
-<center><h1>The Cougaar Dashboard</h1>
+<center>
+<table>
+<tr>
+<td><img src="cougaar.png"/></td>
+<td><h1>The Cougaar Dashboard</h1></td>
+<td><img src="cougaar.png"/></td>
+</tr>
+</table>
 <h3>If the board is green, the code is clean</h3>
 <table>
 <tr>
 <th>Repository</th>
 <th>Module</th>
 <th>Branch</th>
-<th>Built at</th>
+<th>Built<br>at</th>
+<th>Lines<br>of<br>code</th>
 </tr>
 
 <tr>
 <td>core</td>
 <td bgcolor=#00FF00>javaiopatch (0)</td>
 <td>B10_4</td>
-<td>01:59:05</td>
+<td>02:23:46</td>
+<td>2250</td>
 </tr>
 
 </table>
