Added CPD and PMD

--- a/cf-dashboard/index.html
+++ b/cf-dashboard/index.html
@@ -1,4 +1,3 @@
-<message priority='warn'><![CDATA[Starting build at 11/26/2003 02:23:46]]></message>
 <html>
 <head>
 <title>The Cougaar Dashboard</title>
@@ -20,14 +19,18 @@
 <th>Branch</th>
 <th>Built<br>at</th>
 <th>Lines<br>of<br>code</th>
+<th>PMD<br>warnings</th>
+<th>Copy/paste<br>warnings</th>
 </tr>
 
 <tr>
 <td>core</td>
 <td bgcolor=#00FF00>javaiopatch (0)</td>
 <td>B10_4</td>
-<td>02:23:46</td>
-<td>2250</td>
+<td>03:04:28</td>
+<td align="center">2250</td>
+<td align="center"></td>
+<td align="center"><a href="cpd//core_javaiopatch_B10_4_cpd.txt">1</a></td>
 </tr>
 
 </table>
