Widened some columns

--- a/cf-dashboard/index.html
+++ b/cf-dashboard/index.html
@@ -26,8 +26,8 @@
 <tr>
 <td>core</td>
 <td bgcolor=#00FF00>javaiopatch (0)</td>
-<td>B10_4</td>
-<td>03:04:28</td>
+<td width="10%">B10_4</td>
+<td width="10%">03:04:28</td>
 <td align="center">2250</td>
 <td align="center"></td>
 <td align="center"><a href="cpd//core_javaiopatch_B10_4_cpd.txt">1</a></td>
