--- a/cf-dashboard/index.html
+++ b/cf-dashboard/index.html
@@ -27,10 +27,20 @@
 <td>core</td>
 <td bgcolor=#00FF00><a href="build/core_javaiopatch_B10_4_ant.txt">javaiopatch (0)</a></td>
 <td width="10%">B10_4</td>
-<td width="10%">03:23:19</td>
+<td width="10%">03:27:03</td>
 <td align="center">2250</td>
 <td align="center"></td>
 <td align="center"><a href="cpd//core_javaiopatch_B10_4_cpd.txt">1</a></td>
+</tr>
+
+<tr>
+<td>util</td>
+<td bgcolor=#00FF00><a href="build/util_bootstrap_B10_4_ant.txt">bootstrap (0)</a></td>
+<td width="10%">B10_4</td>
+<td width="10%">03:27:08</td>
+<td align="center">593</td>
+<td align="center"><a href="pmd/util_bootstrap_B10_4_pmd.html">2</a></td>
+<td align="center">TBD</td>
 </tr>
 
 </table>
