Added 3rd party jars getter

--- a/cf-dashboard/index.html
+++ b/cf-dashboard/index.html
@@ -24,10 +24,20 @@
 </tr>
 
 <tr>
+<td>util</td>
+<td bgcolor=red><a href="build/util_contract_B10_4_ant.txt">contract (0)</a></td>
+<td width="10%">B10_4</td>
+<td width="10%">03:40:17</td>
+<td align="center">3765</td>
+<td align="center"></td>
+<td align="center">TBD</td>
+</tr>
+
+<tr>
 <td>core</td>
 <td bgcolor=#00FF00><a href="build/core_javaiopatch_B10_4_ant.txt">javaiopatch (0)</a></td>
 <td width="10%">B10_4</td>
-<td width="10%">03:32:19</td>
+<td width="10%">03:36:42</td>
 <td align="center">2250</td>
 <td align="center"></td>
 <td align="center"><a href="cpd//core_javaiopatch_B10_4_cpd.txt">1</a></td>
@@ -37,10 +47,20 @@
 <td>util</td>
 <td bgcolor=#00FF00><a href="build/util_bootstrap_B10_4_ant.txt">bootstrap (0)</a></td>
 <td width="10%">B10_4</td>
-<td width="10%">03:32:24</td>
+<td width="10%">03:36:49</td>
 <td align="center">593</td>
 <td align="center"><a href="pmd/util_bootstrap_B10_4_pmd.html">2</a></td>
 <td align="center">TBD</td>
+</tr>
+
+<tr>
+<td>util</td>
+<td bgcolor=#00FF00><a href="build/util_server_B10_4_ant.txt">server (0)</a></td>
+<td width="10%">B10_4</td>
+<td width="10%">03:39:26</td>
+<td align="center">2955</td>
+<td align="center"><a href="pmd/util_server_B10_4_pmd.html">3</a></td>
+<td align="center"><a href="cpd//util_server_B10_4_cpd.txt">1</a></td>
 </tr>
 
 </table>
