--- a/cf-dashboard/index.html
+++ b/cf-dashboard/index.html
@@ -14,7 +14,7 @@
 <h3>If the board is green, the code is clean</h3>
 <table>
 <tr>
-<th>Repository</th>
+<th>Project</th>
 <th>Module</th>
 <th>Branch</th>
 <th>Built<br>at</th>
@@ -24,20 +24,10 @@
 </tr>
 
 <tr>
-<td>util</td>
-<td bgcolor=red><a href="build/util_contract_B10_4_ant.txt">contract (0)</a></td>
-<td width="10%">B10_4</td>
-<td width="10%">03:40:17</td>
-<td align="center">3765</td>
-<td align="center"></td>
-<td align="center">TBD</td>
-</tr>
-
-<tr>
 <td>core</td>
 <td bgcolor=#00FF00><a href="build/core_javaiopatch_B10_4_ant.txt">javaiopatch (0)</a></td>
 <td width="10%">B10_4</td>
-<td width="10%">03:36:42</td>
+<td width="10%">04:02:21</td>
 <td align="center">2250</td>
 <td align="center"></td>
 <td align="center"><a href="cpd//core_javaiopatch_B10_4_cpd.txt">1</a></td>
@@ -47,7 +37,7 @@
 <td>util</td>
 <td bgcolor=#00FF00><a href="build/util_bootstrap_B10_4_ant.txt">bootstrap (0)</a></td>
 <td width="10%">B10_4</td>
-<td width="10%">03:36:49</td>
+<td width="10%">04:02:29</td>
 <td align="center">593</td>
 <td align="center"><a href="pmd/util_bootstrap_B10_4_pmd.html">2</a></td>
 <td align="center">TBD</td>
@@ -57,10 +47,30 @@
 <td>util</td>
 <td bgcolor=#00FF00><a href="build/util_server_B10_4_ant.txt">server (0)</a></td>
 <td width="10%">B10_4</td>
-<td width="10%">03:39:26</td>
+<td width="10%">04:02:36</td>
 <td align="center">2955</td>
 <td align="center"><a href="pmd/util_server_B10_4_pmd.html">3</a></td>
 <td align="center"><a href="cpd//util_server_B10_4_cpd.txt">1</a></td>
+</tr>
+
+<tr>
+<td>util</td>
+<td bgcolor=#00FF00><a href="build/util_util_B10_4_ant.txt">util (4)</a></td>
+<td width="10%">B10_4</td>
+<td width="10%">04:02:44</td>
+<td align="center">9139</td>
+<td align="center"><a href="pmd/util_util_B10_4_pmd.html">7</a></td>
+<td align="center"><a href="cpd//util_util_B10_4_cpd.txt">2</a></td>
+</tr>
+
+<tr>
+<td>util</td>
+<td bgcolor=#00FF00><a href="build/util_contract_B10_4_ant.txt">contract (0)</a></td>
+<td width="10%">B10_4</td>
+<td width="10%">04:02:57</td>
+<td align="center">3765</td>
+<td align="center"><a href="pmd/util_contract_B10_4_pmd.html">2</a></td>
+<td align="center"><a href="cpd//util_contract_B10_4_cpd.txt">2</a></td>
 </tr>
 
 </table>
