Added more modules, spruced up colors

--- a/cf-dashboard/index.html
+++ b/cf-dashboard/index.html
@@ -4,10 +4,10 @@
 </head>
 <body>
 <center>
-<table>
+<table cellspacing=0 cellpadding=0>
 <tr>
 <td><img src="cougaar.png"/></td>
-<td><h1>The Cougaar Dashboard</h1></td>
+<td bgcolor="#F4D495"><h1>The Cougaar Dashboard</h1></td>
 <td><img src="cougaar.png"/></td>
 </tr>
 </table>
@@ -24,7 +24,17 @@
 </tr>
 
 <tr>
-<td>core</td>
+<td>Core</td>
+<td bgcolor=#00FF00><a href="build/core_core_B10_4_ant.txt">core (8)</a></td>
+<td width="10%">B10_4</td>
+<td width="10%">04:13:11</td>
+<td align="center">40932</td>
+<td align="center"><a href="pmd/core_core_B10_4_pmd.html">79</a></td>
+<td align="center"><a href="cpd//core_core_B10_4_cpd.txt">10</a></td>
+</tr>
+
+<tr>
+<td>Core</td>
 <td bgcolor=#00FF00><a href="build/core_javaiopatch_B10_4_ant.txt">javaiopatch (0)</a></td>
 <td width="10%">B10_4</td>
 <td width="10%">04:02:21</td>
@@ -34,7 +44,7 @@
 </tr>
 
 <tr>
-<td>util</td>
+<td>Utilities</td>
 <td bgcolor=#00FF00><a href="build/util_bootstrap_B10_4_ant.txt">bootstrap (0)</a></td>
 <td width="10%">B10_4</td>
 <td width="10%">04:02:29</td>
@@ -44,7 +54,7 @@
 </tr>
 
 <tr>
-<td>util</td>
+<td>Utilities</td>
 <td bgcolor=#00FF00><a href="build/util_server_B10_4_ant.txt">server (0)</a></td>
 <td width="10%">B10_4</td>
 <td width="10%">04:02:36</td>
@@ -54,7 +64,7 @@
 </tr>
 
 <tr>
-<td>util</td>
+<td>Utilities</td>
 <td bgcolor=#00FF00><a href="build/util_util_B10_4_ant.txt">util (4)</a></td>
 <td width="10%">B10_4</td>
 <td width="10%">04:02:44</td>
@@ -64,7 +74,7 @@
 </tr>
 
 <tr>
-<td>util</td>
+<td>Utilities</td>
 <td bgcolor=#00FF00><a href="build/util_contract_B10_4_ant.txt">contract (0)</a></td>
 <td width="10%">B10_4</td>
 <td width="10%">04:02:57</td>
