Updated to show the rulesets we're actually running

--- a/cf-dashboard/pmd.html
+++ b/cf-dashboard/pmd.html
@@ -1,7 +1,12 @@
 <html>
 <head><title>PMD checks</title></html>
 <body>
-<p>We're currently just running the <a href="http://pmd.sourceforge.net/rules/unusedcode.html">PMD unused code ruleset</a>.  
+				<p>We're currently running the following rules:
+				
+				<ul>
+								<li><a href="http://pmd.sourceforge.net/rules/basic.html">Basic</a>
+								<li><a href="http://pmd.sourceforge.net/rules/unusedcode.html">Unused code</a>  
+				</ul>
 <p>Todd Wright forwarded some more suggestions, so we'll probably run more checks in the future.
 </body>
 </html>
