--- a/support/www/admin_guide/index.html
+++ b/support/www/admin_guide/index.html
@@ -16,9 +16,11 @@ CougaarForge Admin Guide
 <h3>Initial setup</h3>
 <a href="#cust">Customizations</a>
 <br/><a href="#cron">Cron jobs</a>
+<br/><a href="#versions">Software versions</a>
 <h3>Day to day tasks</h3>
 <a href="#proj">Project creation</a>
 <br/><a href="#list">Mailing list creation</a>
+<br/><a href="#checkin">Immediate CVS checkin access</a>
 <h3>Misc</h3>
 <a href="#db">Doing a DB upgrade</a>
 <br/><a href="#changelog">Changelog</a>
@@ -98,10 +100,10 @@ www/docman/view.php
 ================================
 To find changed stuff:
 find /var/www/gforge-3.0/ -type f -ctime +30
+</pre>
 
-Note that we also have a few items in /etc/rc.d/rc.local:
-
-================================
+<p>Note that we also have a few items in /etc/rc.d/rc.local:
+<pre>
 # Ensure PostgreSQL restarts if the machine crashed
 # and left the old pid
 rm /var/pgsql/data/postmaster.pid
@@ -109,8 +111,6 @@ su -l postgres /var/pgsql/bin/mypg_start
 
 # Start Mailman, but only after MailScanner has started
 /usr/local/mailman/bin/mailmanctl start
-================================
-
 </pre>
 
 <a name="cron"></a>
@@ -244,8 +244,30 @@ GForge requires a bunch of cronjobs to run correctly.   They are currently in th
 </td><td>
 0 2 * * * ~/gforge/vacuum.php
 </td></tr>
-
 </table>
+
+<a name="versions"></a>
+<h4>Software versions</h4>
+<p>
+Here are the current version of various key software packages running on CougaarForge:
+<p>GForge:
+<ul>
+<li>Linux kernel 2.6.9-1.667</li>
+<li>GForge 3.3 (with various customizations)</li>
+<li>PostgreSQL 7.4.7</li>
+<li>PHP 4.3.10</li>
+<li>Apache 1.3.33</li>
+<li>Mailman 2.1.5</li>
+<li>CVS 1.11.8</li>
+<li>Ruby 1.8.1</li>
+<li>ViewCVS 0.9.2</li>
+<li>Webalizer 2.01</li>
+</ul>
+<p>Bugzilla:
+<ul>
+<li>MySQL 3.23.58</li>
+<li>Bugzilla 2.16.5</li>
+</ul>
 
 <hr>
 <h3>Day to day tasks</h3>
@@ -313,6 +335,17 @@ When a user enters a new mailing list into the GForge user interface, the new li
 </pre>
 This reads in the new list aliases and sends a SIGHUP to Sendmail. 
 </ul>
+
+<a name="checkin"></a>
+<h4>Immediate checkin access</h4>
+<p>When a person is added to a project, he's not immediately placed in the corresponding Unix group.  Instead, the appropriate records are inserted into the GForge tables, and the change gets reflected in the Unix groups when the hourly cronjob "update_unix_accounts.php" runs.  If you want to give the person immediate checkin access, SSH in and run this cronjob manually:
+<pre>
+[tom@cougaar ~]$ su
+Password:
+[root@cougaar tom]# cd ~/gforge/
+[root@cougaar gforge]# ./update_unix_accounts.php
+[root@cougaar gforge]#
+</pre>
 
 <hr>
 <h3>Misc</h3>
